tests/ui/parser/issues/unnessary-error-issue-138401.stderr
error: mismatched closing delimiter: `)`
  --> $DIR/unnessary-error-issue-138401.rs:1:27
   |
LL | pub fn foo(x: i64) -> i64 {
   |                           ^ unclosed delimiter
LL |     x.abs)
   |          ^
   |          |
   |          mismatched closing delimiter
   |          missing open `(` for this delimiter

error: aborting due to 1 previous error

